Added ratio and update INDEL calling